apps/hello-confidence-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-confidence-website
  namespace: default
  labels:
    app: hello-confidence-website
spec:
  selector:
    app: hello-confidence-website
  ports:
    - port: 80
      targetPort: 80
