apps/hello-confidence-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-confidence-website
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: confidence.erix-homelab.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-confidence-website
                port:
                  number: 80
  tls:
    - hosts:
        - confidence.erix-homelab.site
      secretName: erix-homelab-site-tls
